Fix issue where part of the close button would some times be on a lower z-index than the input field, making it hard to click

--- a/assets/styles/sass/panels/_panel.scss
+++ b/assets/styles/sass/panels/_panel.scss
@@ -41,7 +41,7 @@
 
 	&.editing > .close {
 		height: 32px;
-		z-index: 99;
+		z-index: 999;
 		.caret { @include triangle(up); }
 	}
 
